fully initialized site w styling
Removed the bottom nav-bar and updated the top nav-bar to be fixed instead; moved tabs to the right so that it would align with responsive hamburger for more seamless transition; switched to light mode to improve text and logo contrast per web accessibility standards; edited body font to be serif for improved readibility - headings changed to serif and bolded; all body text centered; home paged added smooth scrolling feature and carousel; added common page headers; fixed team page to center text with profile images (& responsive)

--- a/TeamWebsite/styles/styles.css
+++ b/TeamWebsite/styles/styles.css
@@ -1,21 +1,92 @@
-@font-face {
-  font-family: "Bitter";
-  src: url("../fonts/Bitter-ExtraLight.ttf");
+@font-face { font-family: "Fredoka One";
+  src: url("../fonts/FredokaOne-Regular.ttf") format("truetype");
 }
 
-@font-face {
-  font-family: "Fredoka One";
-  src: url("../fonts/FredokaOne-Regular.ttf") format("truetype");
+
+@font-face { font-family: 'aleo-r';
+  src: url('aleo-regular-webfont.woff2') format('woff2'),
+       url('aleo-regular-webfont.woff') format('woff'),
+       url('../fonts/aleo-regular.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face { font-family: 'galderglynn-r';
+  src: url('../fonts/galderglynn-regular-webfont.woff2') format('woff2'),
+       url('../fonts/galderglynn-regular-webfont.woff') format('woff'),
+       url('../fonts/galderglynn-regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face { font-family: 'worksans-r';
+  src: url('../fonts/worksans-regular-webfont.woff2') format('woff2'),
+       url('../fonts/worksans-regular-webfont.woff') format('woff'),
+       url('../fonts/worksans-regular.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face { font-family: 'worksans-b';
+  src: url('../fonts/worksans-bold-webfont.woff2') format('woff2'),
+       url('../fonts/worksans-bold-webfont.woff') format('woff'),
+       url('../fonts/worksans-bold.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
   max-width: 100%;
   overflow-x: hidden;
   padding-bottom: 300px;
+  padding-top: 76px;
+  font-family: 'worksans-r', serif;
 }
 
-.jumbotron {
-  height: 100vh;
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'worksans-b', serif;
+  padding: 40px;
+}
+
+h1 {
+    font-size: 42px;
+}
+
+h2 {
+  font-size: 42px;
+}
+
+p, ol {
+  font-family: 'aleo-r';
+  text-align: justify;
+  margin: 0 auto;
+  max-width: 60%;
+  position: relative;
+  bottom: 0;
+  padding-top: 30px;
+  padding-bottom: 20px;
+  font-size: 18px;
+}
+
+.li-p {
+  max-width: 100%;
+}
+
+.navbar {
+  background-color: #ffffff;
+  background: rgba(255, 255, 255, 0.4);
+}
+
+.dropdown:hover .dropdown-menu {display: block;}
+
+.dropdown-menu {
+  background-color: #ffffff;
+  background: rgba(255, 255, 255, 0.7);
 }
 
 .row {
@@ -27,46 +98,90 @@ body {
   width: 100% !important;
 }
 
+.scrollbtn {
+  position: relative;
+}
+
+.scrollbtn:hover {
+  transform:scale(1.25, 1.25);
+}
+
 .profile-image {
   border-radius: 50%;
   display: inline-block;
   height: 160px;
   width: 160px;
-  margin-right: 50px;
 }
 
 .image-caption {
-  margin-top: 10px;
+  margin: 0 auto;
   display: block;
-  margin-left: -50px;
+  text-align: center;
 }
 
 .padding-top-md {
   padding-top: 2em;
 }
 
-.display-4,
-.logo {
-  display: inline-block;
-}
-
-.logo {
-  width: 250px;
-  height: 250px;
-}
-
 .welcome-message {
-  font-family: "Fredoka One", cursive;
+  font-family: "Fredoka One", serif;
   text-align: left !important;
   margin-left: 5% !important;
   margin-bottom: -45px;
   font-size: 48px;
 }
 
+.jumbotron-fluid {
+  background-image: url("../images/jumbo-bg.jpg");
+  background-size: cover;
+  height: 100%;
+  padding-top: 50px;
+  padding-bottom: 75px;
+  text-align: center;
+}
+
 .display-4 {
-  margin-right: -75px;
-  font-family: "Bitter", serif;
+  font-family: 'galderglynn-r', sans-serif;
   font-weight: 200;
+  padding-top: 100px;
+  margin: 0px;
+}
+
+.my-4 {
+  width:60%;
+  margin: auto;
+  color: black;
+}
+
+#jumbo-p {
+  background: white;
+  background: rgba(255, 255, 255, 0.7);
+  padding: 30px;
+  margin: 0px;
+  margin-bottom: 40px;
+}
+
+.lead {
+  text-align: center;
+  margin: 0 auto;
+  max-width: 80%;
+  position: relative;
+  bottom: 0;
+}
+
+.carousel-item {
+  max-height: 350px;
+}
+
+#carousel-p {
+  max-width: 100%;
+}
+
+#carousel-p p {
+  text-align: justify;
+  margin: 0;
+  position: relative;
+  bottom: 0;
 }
 
 .footer {
@@ -86,9 +201,10 @@ body {
     font-size: 28px !important;
   }
 
+  /*
   .image-caption {
     margin-left: 0px;
-  }
+  } */
 }
 
 @media only screen and (max-device-width: 1024px) {
@@ -106,6 +222,26 @@ body {
   .logo {
     margin-top: 40px;
   }
+}
+
+@media (min-width: 768px) {
+    .jumbotron h1 {
+        font-size: 3em;
+    }
+}
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+    .jumbotron h1 {
+        font-size: 4em;
+    }
+}
+
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+    .jumbotron h1 {
+        font-size: 6em;
+    }
 }
 
 .fab,
