added a high-res .png of a new header logo and updated the image link in the app page

--- a/terracotta/client/templates/app.html
+++ b/terracotta/client/templates/app.html
@@ -19,7 +19,7 @@
 <body>
 
 <div id="controls">
-	<img src="{{ url_for('static', filename='images/header.svg') }}" class="header">
+	<img src="{{ url_for('static', filename='images/header_large.png') }}" class="header">
 
 	<div class="el-wrapper">
 		<div id="details__container" class="clickable" onclick="toggleDetails();">
