Removed lake folder and contents

--- a/terracotta/client/templates/app.html
+++ b/terracotta/client/templates/app.html
@@ -78,11 +78,12 @@
       <div id="widget"></div>
 
       <div class="el-wrapper">
-        <h2>Available keys</h2>
+        <h2>Band keys</h2>
         <ul id="key-list"></ul>
       </div>
 
       <div class="el-wrapper border-none">
+        <h2>Region Keys</h2>
         <div id="search-fields" style="display: none"></div>
         <div id="thumbnail-holder"></div>
         <table class="scrolling-list" id="search-results"></table>
