--- a/terracotta/client/static/main.css
+++ b/terracotta/client/static/main.css
@@ -63,6 +63,10 @@ input {
   font-size: 0.8em;
 }
 
+input:hover {
+  cursor: pointer;
+}
+
 input[type='text'] {
   width: 200px;
   max-width: 50%;
