Updated radio button functionality to work with two keys in Terracotta

--- a/terracotta/client/templates/app.html
+++ b/terracotta/client/templates/app.html
@@ -77,7 +77,14 @@
 
       <div class="el-wrapper">
         <h2>Band keys</h2>
-        <ul id="key-list"></ul>
+        <ul id="key-list">
+          <label for="band1">Dolorite band (9143)</label>
+          <input type="radio" value="9143" name="band1" />
+          <label for="band2">Band2</label>
+          <input type="radio" value="band" name="band2" />
+          <label for="band3">Band3</label>
+          <input type="radio" value="band" name="band3" />
+        </ul>
       </div>
 
       <div class="el-wrapper border-none" id="regionList">
