Cleaned JS and CSS files and removed unnecessary import files

--- a/terracotta/client/static/main.css
+++ b/terracotta/client/static/main.css
@@ -164,7 +164,9 @@ img.header {
   overflow-x: hidden;
   overflow-y: auto;
 }
-
+#top-controls {
+  margin-bottom: 20px;
+}
 .input__text--upper {
   text-align: right;
 }
