--- a/terracotta/client/templates/app.html
+++ b/terracotta/client/templates/app.html
@@ -30,6 +30,14 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='main.css') }}"
     />
+    <link
+      href="{{ url_for('static', filename='css/font-awesome.min.css') }}"
+      rel="stylesheet"
+    />
+    <link
+      href="{{ url_for('static', filename='halfmoon-variables.min.css') }}"
+      rel="stylesheet"
+    />
     <script
       src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
       integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
@@ -40,15 +48,81 @@
     <script src="{{ url_for('static', filename='main.js') }}"></script>
     <script src="{{ url_for('static', filename='proj4.js')}}"></script>
     <script src="{{ url_for('static', filename='proj4leaflet.js')}}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
   </head>
-  <body>
-    <div id="controls">
-      <div id="top-controls">
-        <label id="switch" class="switch">
-          <input type="checkbox" onchange="toggleTheme()" id="slider" />
-          <span class="slider round"></span>
-        </label>
-        <div id="signin2" data-onsuccess="onSignIn"></div>
+  <body data-set-preferred-mode-onload="true">
+    <div id="controls" class="container-fluid list overflow-y-scroll">
+      <div id="top-controls" class="d-flex d-flex justify-content-between">
+        <div class="dropdown">
+          <button
+            class="btn"
+            data-toggle="dropdown"
+            type="button"
+            id="dropdown-toggle-btn-1"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
+            <i class="fa fa-user" aria-hidden="true"></i>
+            <i class="fa fa-angle-down ml-5" aria-hidden="true"></i>
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdown-toggle-btn-1">
+            <h6 class="dropdown-header">
+              <span id="currentUser">Sign in</span>
+            </h6>
+            <a id="preferences" class="dropdown-item">
+              <i class="fa fa-cog" aria-hidden="true"></i> Preferences
+            </a>
+            <div class="dropdown-content">
+              <div class="pt-5" id="signin2" data-onsuccess="onSignIn"></div>
+              <button
+                class="btn btn-danger d-none"
+                id="sign-out-button"
+                type="button"
+                onclick="signOut()"
+              >
+                <i class="fa fa-sign-out" aria-hidden="true"></i>Logout
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="modal" id="preferencesModule" tabindex="-1" role="dialog">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <a href="#" class="close" role="button" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </a>
+              <h5 class="modal-title">Preferences</h5>
+              <div class="custom-switch">
+                <input
+                  type="checkbox"
+                  id="darkmode-pref"
+                  onclick="halfmoon.toggleDarkMode()"
+                  value=""
+                  checked
+                />
+                <label for="darkmode-pref">Dark mode</label>
+              </div>
+              <div class="text-right mt-20">
+                <!-- text-right = text-align: right, mt-20 = margin-top: 2rem (20px) -->
+                <a href="#" class="btn mr-5" role="button">Close</a>
+                <a href="#" class="btn btn-success" role="button"
+                  >Save Preferences</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--Container for dark mode toggle-->
+        <div class="custom-switch ml-20">
+          <button
+            class="btn btn-action"
+            type="button"
+            onclick="halfmoon.toggleDarkMode()"
+            aria-label="Toggle dark mode"
+          >
+            <i class="fa fa-moon-o" aria-hidden="true"></i>
+          </button>
+        </div>
       </div>
       <img
         src="{{ url_for('static', filename='images/header_large.png') }}"
@@ -58,11 +132,12 @@
       <div class="el-wrapper border-none">
         <div
           id="details__container"
-          class="clickable"
+          class="clickable d-flex justify-content-start"
           onclick="toggleDetails();"
         >
-          <h2 class="info-title">Details</h2>
-          <span class="info-toggle no-select">i</span>
+          <h2 class="content-title">
+            Details <i class="fa fa-info-circle fa-2" aria-hidden="true"></i>
+          </h2>
         </div>
         <div id="details__content">
           <p class="clear" id="info-text">Glacies Indicium capstone project!</p>
@@ -72,40 +147,79 @@
         </p>
       </div>
 
-      <div class="el-wrapper">
-        <a class="btn btn-primary" id="exportButton" target="_blank" download>
-          Export Map
-        </a>
-      </div>
-
+      <hr />
       <div id="widget"></div>
 
       <div class="el-wrapper">
-        <h2>Band keys</h2>
-        <ul id="key-list">
-          <label for="band1">Dolorite band (9143)</label>
-          <input type="radio" value="9143" name="band1" />
-          <label for="band2">Band2</label>
-          <input type="radio" value="band" name="band2" />
-          <label for="band3">Band3</label>
-          <input type="radio" value="band" name="band3" />
-        </ul>
-      </div>
-
-      <div class="el-wrapper border-none" id="regionList">
-        <h2>Region Keys</h2>
-
-        <div id="thumbnail-holder"></div>
-        <div class="scrolling-list" id="search-results"></div>
-        <div id="search-result-controls">
-          <button id="prev-page" onclick="incrementResultsPage(-1);" disabled>
-            &lt;
-          </button>
-          Page <span id="page-counter">1</span>
-          <button id="next-page" onclick="incrementResultsPage(1);">
-            &gt;
-          </button>
+        <h2 class="content-title d-inline-block">Band keys</h2>
+        <button
+          class="btn btn-danger d-none"
+          id="clear-button"
+          type="button"
+          onclick="resetRadioButtons()"
+        >
+          Reset
+        </button>
+        <div id="key-list">
+          <div class="custom-radio mb-10">
+            <input type="radio" name="bandListItem" id="band1" value="9143" />
+            <label for="band1">Band 1</label>
+          </div>
+          <div class="custom-radio mb-10">
+            <input type="radio" name="bandListItem" id="band2" value="9143" />
+            <label for="band2">Band 2</label>
+          </div>
+          <div class="custom-radio mb-10">
+            <input type="radio" name="bandListItem" id="band3" value="9143" />
+            <label for="band3">Band 3</label>
+          </div>
+          <div class="custom-radio mb-10">
+            <input type="radio" name="bandListItem" id="band4" value="9143" />
+            <label for="band4">Band 4</label>
+          </div>
         </div>
+      </div>
+      <hr />
+      <div class="el-wrapper border-none mb-10 p-5" id="regionList">
+        <h2 class="content-title d-inline-block">Region Keys</h2>
+        <a
+          class="btn btn-primary d-inline-block ml-10"
+          id="exportButton"
+          target="_blank"
+          download
+          role="button"
+        >
+          Export Map
+        </a>
+        <div id="thumbnail-holder"></div>
+        <div class="scrolling-list overflow-y-scroll" id="search-results"></div>
+      </div>
+      <div class="d-flex justify-content-start" id="search-result-controls">
+        <ul class="pagination">
+          <li class="page-item">
+            <a
+              class="page-link"
+              id="prev-page"
+              onclick="incrementResultsPage(-1);"
+            >
+              <i class="fa fa-angle-left" aria-hidden="true"></i>
+              <span class="sr-only">Previous</span>
+            </a>
+          </li>
+          <li class="page-item active">
+            <a class="page-link" id="page-counter">1</a>
+          </li>
+          <li class="page-item">
+            <a
+              class="page-link"
+              id="next-page"
+              onclick="incrementResultsPage(1);"
+            >
+              <i class="fa fa-angle-right" aria-hidden="true"></i>
+              <span class="sr-only">Next</span>
+            </a>
+          </li>
+        </ul>
       </div>
 
       <div id="loader__container">
@@ -113,14 +227,12 @@
       </div>
     </div>
 
-    <div id="resizable__buffer"></div>
-
     <div id="map"></div>
 
     <div id="layerInfo__container">
       <div id="layerInfo__container--title" onclick="toggleLayerInfo()">
-        <h3 id="layerInfo__toggle--title" class="no-select">Layer info</h3>
-        <p id="layerInfo__toggle--icon" class="no-select">×</p>
+        <h5 id="layerInfo__toggle--title" class="no-select">Layer info</h5>
+        <p id="layerInfo__toggle--icon" class="no-select text-danger">×</p>
       </div>
       <div id="layerInfo__container--content">
         <p id="layerInfo__URL">current layer:</p>
@@ -130,6 +242,8 @@
     <aside class="error-container">
       <ul id="errors"></ul>
     </aside>
+
+    <script src="{{ url_for('static', filename='halfmoon.js') }}"></script>
     <script
       async
       defer
