Added functionality to load JSON file through Python and added Reddit api to discord bot

--- a/terracotta/client/templates/app.html
+++ b/terracotta/client/templates/app.html
@@ -257,7 +257,11 @@
       defer
     ></script>
     <script type="text/javascript">
-      window.onload = initializeApp.bind(null, '{{ hostname }}');
+      window.onload = initializeApp.bind(
+        null,
+        '{{ hostname }}',
+        '{{ regions|tojson|safe }}'
+      );
     </script>
   </body>
 </html>
